# rs-wikix2parquet

./: Cargo.toml  README.md
example/cli/wikix2parquet/: Cargo.toml  example.sh  wikix2parquet
example/cli/wikix2parquet/src/: main.rs
src/: ix.rs  lib.rs  rows2batches.rs  wtr.rs
