[package]
name = "rs-wikix2parquet"
version = "0.1.0"
edition = "2024"

[dependencies.serde]
version = "1"
default-features = false
features = [
	"std",
	"derive",
]

[dependencies.arrow]
version = "56"
default-features = false
features = [
]

[dependencies.parquet]
version = "56"
default-features = false
features = [
	"arrow",
	"brotli",
	"flate2-zlib-rs",
	"lz4",
	"simdutf8",
	"snap",
	"zstd",
]
